--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4773,7 +4773,9 @@ column with a comma-separated list of neighbors can be created with
    snlc_sim.exe <inputFile> +HOSTNBR   SEPNBR_MAX 10.0  NNBR_WRITE_MAX 10
 \end{verbatim}
 %
-The optional arguments are 
+The sim-input file must include a {\tt HOSTLIB\_FILE} key,
+but no other sim-input keys are required.
+The optional command-line arguments are 
 1) {\tt SEPNBR\_MAX}, the maximum angular separation between galaxies
   (default: $10^{\prime\prime}$), and
 2) {\tt NNBR\_WRITE\_MAX}, the max number of neighbors to include
@@ -4788,8 +4790,7 @@ each neighbor galaxy, and ordering the galaxy matches by
 even if the smallest {\tt DDLR} is the wrong match.
 
 To find the galaxy neighbors quickly when using the output 
-{\tt HOSTLIB+NBR}
-in a simulation,
+{\tt HOSTLIB+NBR} in a simulation,
 the galaxy identifiers are \hostlib\ row numbers (start at row 1)
 rather than {\tt GALID}.
 To allow for easy verification, the {\tt +HOSTNBR} option includes a 
@@ -4821,12 +4822,15 @@ primary \hostlib\ with
 \begin{verbatim}
    snlc_sim.exe <inputFile>  +HOSTAPPEND  <hostlib_append_file>
 \end{verbatim} 
+The sim-input file must include a {\tt HOSTLIB\_FILE} key,
+but no other sim-input keys are required.
 The supplemental {\tt hostlib\_append\_file} must include a
 {\tt VARNAMES} key that begins with {\tt GALID}, and the
 {\tt GALID} values should match those in the primary \hostlib.
 Each row should begin with ``{\tt GAL:}'' key. 
 The sim program ends after writing a new \hostlib,
 and warnings are printed for the number of missing GALIDs.
+
 
 % ------------------------------------
 \subsubsection{Treatment of {\tt LOGMASS} }
