switch default Steffen back to cubic

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -8521,7 +8521,7 @@ the redshift prior as follows:
 \begin{verbatim}
    OPT_PHOTOZ = 1  ! use host zPhot mean and Gauss sigma
    OPT_PHOTOZ = 2  ! use best-z (spec or host photo-z) 
-   OPT_PHOTOZ = 4  ! use photo-z PDF unpacked from quantiles
+   OPT_PHOTOZ = 4  ! use photo-z PDF unpacked from quantiles; cubic interp
    OPT_PHOTOZ = 16 ! set initial zPhot=zSpec and skip grid search (for debug)
 \end{verbatim}
 %
