new sim input HOSTLIB_MAG_DETECT

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4201,7 +4201,8 @@ the sim-input file (or via command-line override):
    HOSTLIB_MAXREAD:      10000        # default=billion
    HOSTLIB_MNINTFLUX_SNPOS: .20       # default=0.0
    HOSTLIB_MXINTFLUX_SNPOS: .97       # default=0.99
-   HOSTLIB_SNR_DETECT:   xxx          # default=0 SNR>xxx (see below)
+   HOSTLIB_SNR_DETECT:   xxx          # default=0  SNR>xxx for detection (see below)
+   HOSTLIB_MAG_DETECT:   xxx          # default=99 MAG>xxx for detection
    HOSTLIB_MAXDDLR:      xxx          # default=4 (for host matches)
    HOSTLIB_MAXDDLR2:     xxx          # default=7 (for HOST_CONFUSION calculation)
    HOSTLIB_SBRADIUS:     xxx          # default=1.2 arcsec
