disable unecessary abort for missing host

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3197,7 +3197,7 @@ An example is shown here,
   SEARCHEFF_SPEC_FILE:  $SNDATA_ROOT/models/searcheff/SEARCHEFF_SPEC_SDSS.DAT
   SEARCHEFF_SPEC_SCALE: 0.8  # default=1.0
        or
-  SEARCHEFF_SPEC_SCALE:  ZERO  # force EFF_SPEC=0 without map
+  SEARCHEFF_SPEC_FILE:  ZERO  # force EFF_SPEC=0 without map
 \end{verbatim}
 % $
 %illustrating both the format and the default location.
