--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -625,7 +625,7 @@ are given by
   \label{eq:ZPspec}
 \end{eqnarray}
 %
-where $m_{1,2}$ are the two mag-reference values,
+where $m_{1,2}$ are the two AB mag-reference values,
 and ${\rm SNR}_{1,2}$ are the corresponding SNR.
 Beware that there is no solution if
 $m_2-m_1 < 2.5\log_{10}({\rm SNR}_1/{\rm SNR}_2)$.
