--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -8400,55 +8400,55 @@ search-efficiencies (\S\ref{subsec:simeff}).
    \label{subsec:plot_util}
 % --------------------------------
 
-  \subsubsection{Viewing Lightcurve Fits }
+  \subsubsection{Viewing Lightcurve Fits: {\tt plot\_snana\_lightcurves.py} }
    \label{sss:lcplot}
 % ------------------------------------
 
-There are two utilities to view light curves. 
-The recommended utility is
+To view light curves,
 \begin{verbatim}
-   plot_snana.py -v <version> -i <snid1,snid2,snid3,etc..>
+   plot_snana_lightcurves.py -v <version> -i <snid1,snid2,snid3,etc..>
 \end{verbatim}
-and optional arguments include {\tt -p} for private data path,
-and {\tt -f} for input file for light curve fit. 
-Typing {\tt plot\_snana.py} with no arguments gives a help menu.
+where {\tt -v} is the data version with FITS (or TEXT) files,
+and {\tt -i} specifies a comma-separated list of SNIDs to show.
+Optional arguments include {\tt -p} for private data path,
+and {\tt -f} for fit-input file to overlay light curve fit. 
+Typing {\tt plot\_snana\_lightcurves.py} with no arguments gives a help menu.
 
+% - - - - -
+\subsubsection{1D and 2D plots for table: {\tt plot\_table.py} }
+\label{sss:plot_table}
 
-There is a much older script that operates on the output ROOT or HBOOK
-file when {\tt LCPLOT} is included in the {\tt SNTABLE\_LIST}
-(\S\ref{subsec:anavar}),
+To make 1D plots, 2D plots, and overlays among multiple samples (e.g., data and sim),
+{\tt plot\_table.py} operates on
+(i) {\tt FITRES} files produced by the light curve
+fitting program ({\tt snlc\_fit.exe}),
+(ii) {\tt HOSTLIB} files
+(need to copy and remove DOCUMENTATION block), or
+(iii) any table with similar keyed format.
+Extensive help on syntax is obtained with
+\begin{verbatim}
+    plot_table.py @@HELP
+      or 
+    plot_table.py @H
+\end{verbatim}
 %
-\begin{verbatim}
-     mkfitplots.pl  <rootFilename>
-\end{verbatim}
-%
-where {\tt rootFilename} is the argument of {\tt \&SNLCINP}
-input {\tt ROOTFILE\_OUT}.
-On each plot the black dots are data (or simulated data)
-and the green curve is best-fit model.
-There are several plotting options; see instructions with
-\begin{verbatim}
-   more $SNANA_DIR/util/mkfitplots.pl
-\end{verbatim}
+Each plot is viewd in a pop-up window by default, or saved
+to pdf or png file using {\tt \@\@SAVE} option.
 
-% --------------------------------------
-  \subsubsection{{\tt ovdatamc.py}~: Plot Utility for Data/MC Overlays}
-  \label{sss:ovdatamc}
 
-Once you have an ascii {\tt FITRES} file from the data and
-MC simulation, the utility ``{\tt ovdatamc.py}'' can be used
-to plot a data/MC overlay for any variable, and with arbitrary
-cuts on any variable inside the FITRES file. If the simulation
-includes core collapse SNe, then the Ia and CC contributions
-to the simulation are overlaid separately and shown with
-different colors. To get a list of arguments and options,
-type {\tt ovdatamc.py} with no arguments. Also read comments
-at top of {\tt \$\snanadir/util/ovdatamc.py}~.
+% - - - - -
+\subsubsection{Plot peakmag vs. redshift: {\tt plot\_peakmag\_redshift.py} }
+\label{sss:plot_peakmag}
 
+To quickly compare brightness among many different models,
+{\tt plot\_peakmag\_redshift.py} plots peakmag vs. redshift for each
+band and sim-data folder specified by path wildcard argument.
+Simulations must be run with {\tt SIMGEN\_DUMP} feature and include the
+{\tt PEAKMAG\_[band]} variables.
 
 
 % ------------------------------------
-%   \clearpage
+   \clearpage
    \subsection{Tracking SN versus Cuts}
    \label{subsec:sncuts}
 % ------------------------------------
