almost done with major plot_table refac; still need to get @@DIFF ALL working

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3320,7 +3320,7 @@ key before the {\tt VARNAMES} key as shown in this example:
 \begin{verbatim}
   REQUIRE:   1
   VARNAMES:  DTSEASON_PEAK  SPECEFF
-  SPECEFF:   0    1.0   # 100# eff for in-season 
+  SPECEFF:   0    1.0   # 100% eff for in-season peakMJD
   SPECEFF:  999   1.0
 \end{verbatim}
 %
