Documentation of dust changes

--- a/doc/snana_manual.bib
+++ b/doc/snana_manual.bib
@@ -294,7 +294,7 @@ archivePrefix = "arXiv",
 @ARTICLE{MICE2015,
    author = {{Carretero}, J. and others},
     title = "{An algorithm to build mock galaxy catalogues using MICE simulations}",
-  journal = {mnras},
+  journal = {MNRAS},
 archivePrefix = "arXiv",
    eprint = {1411.3286},
  keywords = {Astronomical data bases, catalogues, galaxies: evolution, galaxies: haloes, large-scale structure of Universe},
@@ -311,7 +311,7 @@ archivePrefix = "arXiv",
 @ARTICLE{LogNormal2013,
    author = {{Marra}, V. and {Quartin}, M. and {Amendola}, L.},
     title = "{Accurate weak lensing of standard candles. I. Flexible cosmological fits}",
-  journal = {prd},
+  journal = prd,
 archivePrefix = "arXiv",
    eprint = {1304.7689},
  primaryClass = "astro-ph.CO",
@@ -331,7 +331,7 @@ archivePrefix = "arXiv",
 @ARTICLE{BBC,
    author = {{Kessler}, R. and {Scolnic}, D.},
     title = "{Correcting Type Ia Supernova Distances for Selection Biases and Contamination in Photometrically Identified Samples}",
-  journal = {apj},
+  journal = apj,
 archivePrefix = "arXiv",
    eprint = {1610.04677},
  keywords = {cosmological parameters, supernovae: general},
@@ -344,3 +344,137 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...836...56K},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Cardelli1989,
+       author = {{Cardelli}, J.~A. and {Clayton}, G.~C. and {Mathis}, J.~S.},
+        title = "{The Relationship between Infrared, Optical, and Ultraviolet Extinction}",
+      journal = apj,
+         year = 1989,
+        month = oct,
+       volume = {345},
+        pages = {245},
+          doi = {10.1086/167900},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1989ApJ...345..245C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{ODonnell1994,
+       author = {{O'Donnell}, J.~E.},
+        title = "{$R_V$-dependent Optical and Near-Ultraviolet Extinction}",
+      journal = apj,
+         year = 1994,
+        month = feb,
+       volume = {422},
+        pages = {158},
+          doi = {10.1086/173713},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1994ApJ...422..158O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fitzpatrick1999,
+       author = {{Fitzpatrick}, E.~L.},
+        title = "{Correcting for the Effects of Interstellar Extinction}",
+      journal = pasp,
+         year = 1999,
+        month = jan,
+       volume = {111},
+       number = {755},
+        pages = {63-75},
+          doi = {10.1086/316293},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9809387},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1999PASP..111...63F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Fitzpatrick2004,
+       author = {{Fitzpatrick}, E.~L.},
+        title = "{Interstellar Extinction in the Milky Way Galaxy}",
+     keywords = {Astrophysics},
+    booktitle = {Astrophysics of Dust},
+         year = 2004,
+       editor = {{Witt}, A.~N. and {Clayton}, G.~C. and {Draine}, B.~T.},
+       series = {ASP Conf.\ Series},
+       volume = {309},
+        month = may,
+        pages = {33},
+          doi = {10.48550/arXiv.astro-ph/0401344},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0401344},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004ASPC..309...33F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Gordon2003,
+       author = {{Gordon}, K.~D. and others},
+        title = "{A Quantitative Comparison of the Small Magellanic Cloud, Large Magellanic Cloud, and Milky Way Ultraviolet to Near-Infrared Extinction Curves}",
+      journal = apj,
+         year = 2003,
+        month = sep,
+       volume = {594},
+       number = {1},
+        pages = {279-293},
+          doi = {10.1086/376774},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0305257},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...594..279G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Gordon2023,
+       author = {{Gordon}, K.~D. and others},
+        title = "{One Relation for All Wavelengths: The Far-ultraviolet to Mid-infrared Milky Way Spectroscopic R(V)-dependent Dust Extinction Relationship}",
+      journal = apj,
+         year = 2023,
+        month = jun,
+       volume = {950},
+       number = {2},
+          eid = {86},
+        pages = {86},
+          doi = {10.3847/1538-4357/accb59},
+archivePrefix = {arXiv},
+       eprint = {2304.01991},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023ApJ...950...86G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Gordon2016,
+       author = {{Gordon}, K.~D. and others},
+        title = "{The Panchromatic Hubble Andromeda Treasury. XV. The BEAST: Bayesian Extinction and Stellar Tool}",
+      journal = apj,
+         year = 2016,
+        month = aug,
+       volume = {826},
+       number = {2},
+          eid = {104},
+        pages = {104},
+          doi = {10.3847/0004-637X/826/2/104},
+archivePrefix = {arXiv},
+       eprint = {1606.06182},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...826..104G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Gordon2024,
+       author = {{Gordon}, K.},
+        title = "{dust\_extinction: Interstellar Dust Extinction Models}",
+      journal = {J.\ Open Source Software},
+     keywords = {astronomy, milky way, magellanic clouds, dust, extinction, interstellar, Python},
+         year = 2024,
+        month = aug,
+       volume = {9},
+       number = {100},
+          eid = {7023},
+        pages = {7023},
+          doi = {10.21105/joss.07023},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024JOSS....9.7023G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
