--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3960,7 +3960,11 @@ In {\tt MWgaldust.c}, the function `{\tt GALextinct}'
 applies the selected color law (based on {\tt OPT\_MWCOLORLAW}) 
 to compute the extinction at arbitrary wavelengths,
 and `{\tt modify\_MWEBV\_SFD}' determines $E(B-V)$
-according to {\tt OPT\_MWEBV}.
+according to {\tt OPT\_MWEBV}. The color laws currently
+implemented within the `{\tt GALextinct}' function are mostly
+$R_V$-dependent extinction laws derived from observations
+in the Milky Way (\S\ref{sss:GALextinc_curves}).
+
 To turn off Galactic extinction, set either
 {\tt OPT\_MWCOLORLAW} or {\tt OPT\_MWEBV} to zero.
 Analogous control keys exist in the fitting programs 
@@ -3974,9 +3978,14 @@ way to see the current options is to grep the definition keys,
 \begin{Verbatim}[frame=single]
 grep  OPT_MWCOLORLAW  $SNANA_DIR/src/MWgaldust.h
 #define OPT_MWCOLORLAW_OFF      0  // No Extinction applied.
-#define OPT_MWCOLORLAW_CCM89   89  // Clayton,Cardelli,Matheson, 1989
-#define OPT_MWCOLORLAW_ODON94  94  // O'Donnel 1994 update 
-#define OPT_MWCOLORLAW_FITZ99  99  // Fitzpatrick 1999
+#define OPT_MWCOLORLAW_CCM89   89  // Cardelli, Clayton, & Mathis (1989)
+#define OPT_MWCOLORLAW_ODON94  94  // O'Donnell (1994) update
+#define OPT_MWCOLORLAW_FITZ99_APPROX  -99   // approx Fitzpatrick (1999)
+#define OPT_MWCOLORLAW_FITZ99_EXACT   99 // exact Fitzpatrick (1999)
+#define OPT_MWCOLORLAW_GORD03  203 // Gordon et al. (2003)
+#define OPT_MWCOLORLAW_FITZ04  204 // Fitzpatrick (2004)
+#define OPT_MWCOLORLAW_GORD16  216 // Gordon et al. (2016)
+#define OPT_MWCOLORLAW_GORD23  223 // Gordon et al. (2023)
 
 grep  OPT_MWEBV  $SNANA_DIR/src/MWgaldust.h
 #define OPT_MWEBV_OFF            0  // no extinction
@@ -4048,6 +4057,43 @@ However, for large variations it would be prudent to make an
 explicit crosscheck by re-generating another kcor/calib file.
 
 
+\subsubsection{Milky-Way Extinction Curves}
+\label{sss:GALextinc_curves}
+There are a number of extinction laws now present and
+accessible via the `\texttt{GALextinct}' function. The
+form used is selected by the {\tt OPT\_MWCOLORLAW} key.
+The default option is the CCM89 law with O'Donnell's
+modification \cite{Cardelli1989, ODonnell1994}. Also
+included are variants of the Fitzpatrick law 
+\cite{Fitzpatrick1999, Fitzpatrick2004}, and a new UV--optical--NIR--MIR
+curve from Gordon et al.~\cite{Gordon2023}. All of these are $R_V$-dependent.
+The `\texttt{GALextinct}' function will abort if called 
+outside the valid wavelength range of these models.
+Also included is the two-parameter $(R_V^A,f_A)$-dependent curve
+from Gordon et al.~\cite{Gordon2016}. This gives a mixture of MW-like \cite{Fitzpatrick1999}
+and SMC-bar-like \cite{Gordon2003} dust. At the time of writing, $f_A$ 
+is not available as a free parameter, and is hardcoded as $f_A=0$. This
+reverts to the SMC bar dust law with $R_V=2.74$ \cite{Gordon2003}. This 
+can also be accessed via its own key, although it will abort for $R_V\neq2.74$.
+Other than this example, $R_V$ restrictions are not enforced, 
+but they are defined via the variables \verb!RVMIN_*! and \verb!RVMAX_*! in 
+\verb!$SNANA_DIR/src/MWgaldust.h!.
+
+\textbf{A Note About F99-like Dust Laws:} Extinction laws of the
+form introduced by Fitzpatrick \cite{Fitzpatrick1999} have a troubled history in
+\texttt{SNANA}. The current implementation of F99 is set by the
+`\verb!GALextinct_Fitz99_exact!' function, and is based on a ``natural''
+cubic spline that mirrors Fitzpatrick's \verb!FM_UNRED.pro! IDL routine.
+This is accessed via `\verb!OPT_MWCOLORLAW : 99!', and also forms the
+basis of several other extinction laws 
+\cite{Fitzpatrick2004, Gordon2016, Gordon2003}.
+Prior to September 2024, \texttt{SNANA}'s F99 implementation was based
+on a polynomial fit to the ratio of F99 and O94. This is only reliable for 
+$R_V=3.1$. For legacy reasons, this remains available via the 
+`\verb!OPT_MWCOLORLAW : -99!' key. Another caveat to keep in mind is that
+the F99-like curves currently have $\sim$mmag disagreements with the public
+\verb!dust_extinction! package \cite{Gordon2024} due to differences in
+the spline boundary conditions.
 
 \subsubsection{Simulating Intergalactic Extinction}
 \label{sss:IGM}
