Fix one more ref.

--- a/doc/snana_manual.bib
+++ b/doc/snana_manual.bib
@@ -223,7 +223,7 @@ publisher = {World Publishing Company, Hanoi, Vietnam},
     author = {Hui, L. and Greene, P.~B.},
      title = "{Correlated Fluctuations in Luminosity Distance and the  
                 Importance of Peculiar Motion in Supernova Surveys}",
-   journal = {Phys. Rev.},
+   journal = prd,
     eprint = {arXiv:astro-ph/0512159},
       year = 2006,
     volume = 73,
